[tool.poetry]
name = "goit-pyml-hw-01"
version = "0.1.0"
description = ""
authors = ["Serhii-SA <serg.a.tolstov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
